--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="estilos.css" />
-  </head>
-  <body>
+
     <h1>Skate Park</h1>
 
     <div class="py-4">
@@ -59,8 +44,7 @@
           </tr>
         </tbody>
       </table>
-      <a href="#">Iniciar Sesión</a> |
-      <a href="#">Registrarme</a>
+      <a href="/login">Iniciar Sesión</a> |
+      <a href="/registrate">Registrarme</a>
     </div>
-  </body>
-</html>
+
